--- a/about.html
+++ b/about.html
@@ -44,90 +44,120 @@
       </div>
     </div>
 
-    <!-- header section starts -->
-    <header class="header_section">
-      <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container">
-          <!-- Logo dan nama perusahaan -->
-          <a class="navbar-brand d-flex align-items-center" href="index.html">
-            <img src="images/vikasa-logo.png" alt="Vikasa Logo" class="logo" />
-            <span>Vikasa</span>
-          </a>
+<!-- header section starts -->
+<header class="header_section">
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg custom_nav-container">
+      <!-- Logo dan nama perusahaan -->
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+        <img src="images/vikasa-logo.png" alt="Vikasa Logo" class="logo" />
+        <span>Vikasa</span>
+      </a>
 
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class=""> </span>
-          </button>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class=""> </span>
+      </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav  ">
-              <li class="nav-item ">
-                <a class="nav-link" href="index.html">Home </a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="about.html"> About <span class="sr-only">(current)</span> </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="product.html">Product</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="why.html">Why Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="team.html">Team</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
-              </li>
-              <form class="form-inline">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                  <i class="fa fa-search" aria-hidden="true"></i>
-                </button>
-              </form>
-            </ul>
-          </div>
-        </nav>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="product.html"> Product</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span> </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="team.html">Team</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="help.html">Help</a> <!-- Menu Help ditambahkan disini -->
+          </li>
+          <form class="form-inline">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="searchInput">
+            <button class="btn my-2 my-sm-0 nav_search-btn" type="submit">
+              <i class="fa fa-search" aria-hidden="true"></i>
+            </button>
+          </form>
+        </ul>
       </div>
-    </header>
-    <!-- end header section -->
+    </nav>
   </div>
+</header>
+<!-- end header section -->
 
-  <!-- about section -->
-
-  <section class="about_section layout_padding">
-    <div class="container  ">
-      <div class="heading_container heading_center">
-        <h2>
-          About <span>Us</span>
-        </h2>
-        <p>
-          
+<!-- About Section -->
+<section class="about_section layout_padding" style="background-color: #00204a; padding: 80px 0;">
+  <div class="container">
+    <div class="heading_container heading_center" style="margin-bottom: 40px;">
+      <h2 style="font-size: 40px; color: #ffffff; position: relative;">
+        About <span style="color: #00bbf0;">Us</span>
+      </h2>
+      <div style="position: absolute; bottom: -10px; left: 0; right: 0; height: 3px; background-color: #00bbf0; width: 100px; margin: 0 auto;"></div> <!-- Garis dekoratif -->
+      <p style="font-size: 20px; color: #ffffff; text-align: center; margin-top: 20px;">
+        Learn more about our story and what makes us unique.
+      </p>
+    </div>
+    <div class="row justify-content-center" style="margin-top: 50px;">
+      <div class="col-md-4" style="animation: fadeIn 1s ease-out;">
+        <div class="icon-box" style="text-align: center;">
+          <i class="fa fa-cogs" style="font-size: 40px; color: #ffffff;"></i>
+        </div>
+        <h4 style="color: #ffffff; text-align: center; margin-top: 20px;">Innovative Design</h4>
+        <p style="color: #ffffff; text-align: center; font-size: 16px;">
+          Our smart suitcases feature cutting-edge technology for maximum convenience.
         </p>
       </div>
-      <div class="row">
-        <div class="col-md-6 ">
-          <div class="img-box">
-            <img src="images/about-img.png" alt="">
-          </div>
+      <div class="col-md-4" style="animation: fadeIn 1.2s ease-out;">
+        <div class="icon-box" style="text-align: center;">
+          <i class="fa fa-lock" style="font-size: 40px; color: #ffffff;"></i>
         </div>
-        <div class="col-md-6">
-          <div class="detail-box">
-            <h3>
-              We Are Vikasa
-            </h3>
-            <p>
-              At Vikasa, we are committed to transforming the way you travel. Our smart suitcases are crafted with cutting-edge technology to ensure maximum convenience, security, and style for modern travelers. Whether you're embarking on a short trip or a long adventure, our products are designed to meet your needs, making your journey smoother and more enjoyable. Join us in redefining the future of travel with Vikasa – where innovation meets practicality.
-            </p>
-            <p>
-            <a href="">
-              Read More
-            </a>
-          </div>
+        <h4 style="color: #ffffff; text-align: center; margin-top: 20px;">Top-Notch Security</h4>
+        <p style="color: #ffffff; text-align: center; font-size: 16px;">
+          We prioritize the security of your belongings with state-of-the-art systems.
+        </p>
+      </div>
+      <div class="col-md-4" style="animation: fadeIn 1.4s ease-out;">
+        <div class="icon-box" style="text-align: center;">
+          <i class="fa fa-plane" style="font-size: 40px; color: #ffffff;"></i>
+        </div>
+        <h4 style="color: #ffffff; text-align: center; margin-top: 20px;">Ultimate Convenience</h4>
+        <p style="color: #ffffff; text-align: center; font-size: 16px;">
+          Enjoy effortless travel with our intelligent luggage designed for modern explorers.
+        </p>
+      </div>
+    </div>
+    <div class="row justify-content-center" style="margin-top: 60px;">
+      <div class="col-md-10">
+        <div class="detail-box" style="text-align: center; background-color: #003c6b; border-radius: 8px; padding: 40px; box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);">
+          <h3 style="font-size: 32px; font-weight: bold; color: #ffffff;">
+            We Are Vikasa
+          </h3>
+          <p style="font-size: 18px; color: #ffffff; line-height: 1.8; margin-top: 20px;">
+            At Vikasa, we are committed to transforming the way you travel. Our smart suitcases are crafted with cutting-edge technology to ensure maximum convenience, security, and style for modern travelers. Whether you're embarking on a short trip or a long adventure, our products are designed to meet your needs, making your journey smoother and more enjoyable. Join us in redefining the future of travel with Vikasa – where innovation meets practicality.
+          </p>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+<!-- End About Section -->
 
-  <!-- end about section -->
+<!-- Animations -->
+<style>
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(30px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+</style>
 
   <!-- info section -->
 
@@ -199,11 +229,11 @@
               <a class="" href="product.html">
                 Product
               </a>
-              <a class="" href="why.html">
-                Why Us
-              </a>
               <a class="" href="team.html">
                 Team
+              </a>
+              <a class="" href="help.html">
+                Help
               </a>
             </div>
           </div>
