--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </div>
 
-    <!-- header section starts -->
+<!-- header section starts -->
 <header class="header_section">
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg custom_nav-container">
@@ -64,21 +64,19 @@
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html"> About</a>
+            <a class="nav-link" href="product.html"> Product</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="product.html">Product</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="why.html">Why Us</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="team.html">Team</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
+            <a class="nav-link" href="help.html">Help</a> <!-- Menu Help ditambahkan disini -->
           </li>
           <form class="form-inline">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="searchInput">
             <button class="btn my-2 my-sm-0 nav_search-btn" type="submit">
               <i class="fa fa-search" aria-hidden="true"></i>
             </button>
@@ -89,6 +87,13 @@
   </div>
 </header>
 <!-- end header section -->
+
+ <!-- Customer Support Icon -->
+<div class="support-icon">
+  <a href="help.html">
+    <i class="fa fa-question-circle"></i>
+  </a>
+</div>
 
 <!-- slider section -->
 <section class="slider_section ">
@@ -105,7 +110,7 @@
                 </h1>
                 <p>Travel smarter with Vikasa's Smart Suitcase! Featuring built-in charging, GPS tracking, and top-notch security, it's your perfect travel companion. Stay connected and secure, wherever you go!</p>
                 <div class="btn-box">
-                  <a href="" class="btn1">
+                  <a href="product.html" class="btn1">
                     Read More
                   </a>
                 </div>
@@ -129,7 +134,7 @@
                   Suitcase
                 </h1>
                 <p>
-                  Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
+                  Travel smarter with Vikasa's Smart Suitcase! Featuring built-in charging, GPS tracking, and top-notch security, it's your perfect travel companion. Stay connected and secure, wherever you go!
                 </p>
                 <div class="btn-box">
                   <a href="" class="btn1">
@@ -140,7 +145,7 @@
             </div>
             <div class="col-md-6">
               <div class="img-box">
-                <img src="images/slider-img.png" alt="">
+                <img src="images/slider-img2.png" alt="">
               </div>
             </div>
           </div>
@@ -156,7 +161,7 @@
                   Suitcase
                 </h1>
                 <p>
-                  Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
+                  Travel smarter with Vikasa's Smart Suitcase! Featuring built-in charging, GPS tracking, and top-notch security, it's your perfect travel companion. Stay connected and secure, wherever you go!
                 </p>
                 <div class="btn-box">
                   <a href="" class="btn1">
@@ -167,7 +172,7 @@
             </div>
             <div class="col-md-6">
               <div class="img-box">
-                <img src="images/slider-img.png" alt="">
+                <img src="images/slider-img3.png" alt="">
               </div>
             </div>
           </div>
@@ -223,8 +228,7 @@
                   <i class="fa fa-quote-left" aria-hidden="true"></i>
                 </div>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
-              </div>
+                  This suitcase is a game changer! It’s spacious, tech-savvy, and makes traveling hassle-free. Worth every penny!              </div>
             </div>
           </div>
           <div class="item">
@@ -245,8 +249,7 @@
                   <i class="fa fa-quote-left" aria-hidden="true"></i>
                 </div>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
-              </div>
+                  Traveling has never been this easy! Vikasa’s Airwheel Smart Suitcase follows me effortlessly, and the built-in power bank is a lifesaver. Highly recommended!              </div>
             </div>
           </div>
           <div class="item">
@@ -267,8 +270,7 @@
                   <i class="fa fa-quote-left" aria-hidden="true"></i>
                 </div>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
-              </div>
+                  Vikasa has redefined modern travel. The Airwheel Smart Suitcase is stylish, functional, and incredibly smart. I love the remote control option!              </div>
             </div>
           </div>
           <div class="item">
@@ -289,8 +291,7 @@
                   <i class="fa fa-quote-left" aria-hidden="true"></i>
                 </div>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
-              </div>
+                  I was skeptical at first, but this smart suitcase truly delivers! The self-following feature works smoothly, and it’s super convenient for airport travel.              </div>
             </div>
           </div>
         </div>
@@ -371,11 +372,11 @@
               <a class="" href="product.html">
                 Product
               </a>
-              <a class="" href="why.html">
-                Why Us
-              </a>
               <a class="" href="team.html">
                 Team
+              </a>
+              <a class="" href="help.html">
+                Help
               </a>
             </div>
           </div>
