--- a/product.html
+++ b/product.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
-  <title> Vikasa </title>
+  <title> Vikasa - Product </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -32,9 +32,43 @@
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
 
+  <style>
+    /* Adjust text color to white */
+    .detail-box h1, .detail-box p, .detail-box h3 {
+      color: white;
+    }
+
+    /* Make the product name bold */
+    .detail-box h1 {
+      font-weight: bold;
+    }
+
+    /* Style for the price */
+    .detail-box h3 {
+      color: #f1c40f; /* A bright yellow for emphasis */
+      font-size: 24px; /* Bigger font size for the price */
+      font-weight: bold; /* Make the price stand out */
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Add shadow for a better look */
+    }
+
+    /* Navigation arrows to white */
+    .carousel-control-prev-icon, .carousel-control-next-icon {
+      background-color: white;
+    }
+
+    .carousel-control-prev, .carousel-control-next {
+      color: white;
+    }
+
+    /* Adjust arrow size */
+    .carousel-control-prev-icon, .carousel-control-next-icon {
+      font-size: 30px;
+    }
+  </style>
+
 </head>
 
-<body class="sub_page">
+<body>
 
   <div class="hero_area">
 
@@ -48,38 +82,33 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
-          <!-- Logo dan nama perusahaan -->
           <a class="navbar-brand d-flex align-items-center" href="index.html">
             <img src="images/vikasa-logo.png" alt="Vikasa Logo" class="logo" />
             <span>Vikasa</span>
           </a>
-
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class=""> </span>
           </button>
-
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav  ">
-              <li class="nav-item ">
-                <a class="nav-link" href="index.html">Home </a>
-              </li>
+            <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="product.html">Product <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="product.html">Product <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="why.html">Why Us</a>
+                <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="team.html">Team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
+                <a class="nav-link" href="help.html">Help</a>
               </li>
               <form class="form-inline">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="searchInput">
+                <button class="btn my-2 my-sm-0 nav_search-btn" type="submit">
                   <i class="fa fa-search" aria-hidden="true"></i>
                 </button>
               </form>
@@ -89,89 +118,112 @@
       </div>
     </header>
     <!-- end header section -->
-  </div>
 
-
-  <!-- service section -->
-
-<section class="service_section layout_padding">
-    <div class="service_container">
-        <div class="container">
-            <div class="heading_container heading_center">
-                <h2>
-                    Our <span>Product</span>
-                </h2>
-                <p>
-                    Explore our innovative products, designed for comfort and efficiency.
-                </p>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="box">
-                        <div class="img-box">
-                            <img src="images/s1.png" alt="Vikasa Koper Airwheel">
-                        </div>
-                        <div class="detail-box">
-                            <h5>
-                                Vikasa Koper Airwheel
-                            </h5>
-                            <p>
-                                Our innovative Vikasa Koper Airwheel is designed to offer a seamless traveling experience with built-in mobility.
-                            </p>
-                            <a href="">
-                                Read More
-                            </a>
-                        </div>
-                    </div>
+<!-- Slider Section -->
+<section class="slider_section ">
+  <div id="customCarousel1" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="container ">
+          <div class="row">
+            <div class="col-md-6 ">
+              <div class="detail-box">
+                <h1>
+                  Smart <br>
+                  Suitcase
+                </h1>
+                <p>Travel smarter with Vikasa's Smart Suitcase! Featuring built-in charging, GPS tracking, and top-notch security, it's your perfect travel companion. Stay connected and secure, wherever you go!</p>
+                <h3>Price: Rp. 15.004.600</h3>
+                <div class="btn-box">
+                  <a href="product.html" class="btn1" style="background-color: #ff7f00; padding: 12px 30px; color: white; border-radius: 5px; font-weight: bold;">
+                    Buy Now
+                  </a>
                 </div>
-                <div class="col-md-4">
-                    <div class="box">
-                        <div class="img-box">
-                            <img src="images/s2.png" alt="">
-                        </div>
-                        <div class="detail-box">
-                            <h5>
-                                Security Storage
-                            </h5>
-                            <p>
-                                Safely store your valuable items with our secure and smart storage options.
-                            </p>
-                            <a href="">
-                                Read More
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="box">
-                        <div class="img-box">
-                            <img src="images/s3.png" alt="">
-                        </div>
-                        <div class="detail-box">
-                            <h5>
-                                Expert Support
-                            </h5>
-                            <p>
-                                Get professional assistance whenever you need it, with our expert support services.
-                            </p>
-                            <a href="">
-                                Read More
-                            </a>
-                        </div>
-                    </div>
-                </div>
+              </div>
             </div>
-            <div class="btn-box">
-                <a href="">
-                    View All
-                </a>
+            <div class="col-md-6">
+              <div class="img-box">
+                <img src="images/slider-img.png" alt="">
+              </div>
             </div>
+          </div>
         </div>
+      </div>
+      <div class="carousel-item ">
+        <div class="container ">
+          <div class="row">
+            <div class="col-md-6 ">
+              <div class="detail-box">
+                <h1>
+                  Smart <br>
+                  Suitcase
+                </h1>
+                <p>
+                  Travel smarter with Vikasa's Smart Suitcase! Featuring built-in charging, GPS tracking, and top-notch security, it's your perfect travel companion. Stay connected and secure, wherever you go!
+                </p>
+                <h3>Price: Rp. 15.004.600</h3>
+                <div class="btn-box">
+                  <a href="" class="btn1" style="background-color: #ff7f00; padding: 12px 30px; color: white; border-radius: 5px; font-weight: bold;">
+                    Buy Now
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="img-box">
+                <img src="images/slider-img2.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container ">
+          <div class="row">
+            <div class="col-md-6 ">
+              <div class="detail-box">
+                <h1>
+                  Smart <br>
+                  Suitcase
+                </h1>
+                <p>
+                  Travel smarter with Vikasa's Smart Suitcase! Featuring built-in charging, GPS tracking, and top-notch security, it's your perfect travel companion. Stay connected and secure, wherever you go!
+                </p>
+                <h3>Price: Rp. 15.004.600</h3>
+                <div class="btn-box">
+                  <a href="" class="btn1" style="background-color: #ff7f00; padding: 12px 30px; color: white; border-radius: 5px; font-weight: bold;">
+                    Buy Now
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="img-box">
+                <img src="images/slider-img3.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    <!-- Tombol Panah -->
+    <a class="carousel-control-prev" href="#customCarousel1" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true" style="background-color: white; border-radius: 50%; padding: 10px;"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#customCarousel1" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true" style="background-color: white; border-radius: 50%; padding: 10px;"></span>
+      <span class="sr-only">Next</span>
+    </a>
+    <!-- Carousel Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#customCarousel1" data-slide-to="0" class="active"></li>
+      <li data-target="#customCarousel1" data-slide-to="1"></li>
+      <li data-target="#customCarousel1" data-slide-to="2"></li>
+    </ol>
+  </div>
 </section>
-
-
-  <!-- end service section -->
+<!-- End Slider Section -->
 
   <!-- info section -->
 
@@ -243,11 +295,11 @@
               <a class="" href="product.html">
                 Product
               </a>
-              <a class="" href="why.html">
-                Why Us
-              </a>
               <a class="" href="team.html">
                 Team
+              </a>
+              <a class="" href="help.html">
+                Help
               </a>
             </div>
           </div>
@@ -264,24 +316,43 @@
           </form>          
           
   </section>
-  <!-- footer section -->
 
-  <!-- jQery -->
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-  <!-- popper js -->
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
-  <!-- bootstrap js -->
-  <script type="text/javascript" src="js/bootstrap.js"></script>
-  <!-- owl slider -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
-  </script>
-  <!-- custom js -->
-  <script type="text/javascript" src="js/custom.js"></script>
-  <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
-  </script>
-  <!-- End Google Map -->
+  <!-- end info section -->
+    <!-- footer section -->
+    <section class="footer_section">
+      <div class="container">
+        <p>&copy; <span id="displayYear"></span> All Rights Reserved By Vikasa Company</p>
+      </div>
+    </section>
+    <!-- footer section -->
+
+    <!-- jQuery -->
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <!-- Popper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="js/bootstrap.js"></script>
+    <!-- Owl Carousel JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <!-- Custom JS -->
+    <script src="js/custom.js"></script>
+
+    <!-- Initialize Owl Carousel for product images -->
+    <script>
+      $(document).ready(function () {
+        $(".owl-carousel").owlCarousel({
+          items: 1, // Show one image at a time
+          loop: true, // Infinite loop
+          autoplay: true, // Automatically change the image
+          autoplayTimeout: 15000, // 15 seconds for automatic transition
+          nav: true, // Show navigation arrows
+          navText: ["<i class='fa fa-chevron-left'></i>", "<i class='fa fa-chevron-right'></i>"], // Arrows for navigation
+        });
+      });
+
+      // Show the current year
+      document.getElementById("displayYear").innerHTML = new Date().getFullYear();
+    </script>
 
 </body>
 
