--- a/team.html
+++ b/team.html
@@ -44,52 +44,49 @@
       </div>
     </div>
 
-    <!-- header section starts -->
-    <header class="header_section">
-      <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container">
-          <!-- Logo dan nama perusahaan -->
-          <a class="navbar-brand d-flex align-items-center" href="index.html">
-            <img src="images/vikasa-logo.png" alt="Vikasa Logo" class="logo" />
-            <span>Vikasa</span>
-          </a>
+<!-- header section starts -->
+<header class="header_section">
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg custom_nav-container">
+      <!-- Logo dan nama perusahaan -->
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+        <img src="images/vikasa-logo.png" alt="Vikasa Logo" class="logo" />
+        <span>Vikasa</span>
+      </a>
 
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class=""> </span>
-          </button>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class=""> </span>
+      </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav  ">
-              <li class="nav-item ">
-                <a class="nav-link" href="index.html">Home </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html"> About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="product.html">Product</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="why.html">Why Us</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="team.html">Team <span class="sr-only">(current)</span> </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
-              </li>
-              <form class="form-inline">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                  <i class="fa fa-search" aria-hidden="true"></i>
-                </button>
-              </form>
-            </ul>
-          </div>
-        </nav>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="product.html"> Product</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="team.html">Team <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="help.html">Help</a> <!-- Menu Help ditambahkan disini -->
+          </li>
+          <form class="form-inline">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="searchInput">
+            <button class="btn my-2 my-sm-0 nav_search-btn" type="submit">
+              <i class="fa fa-search" aria-hidden="true"></i>
+            </button>
+          </form>
+        </ul>
       </div>
-    </header>
-    <!-- end header section -->
+    </nav>
   </div>
+</header>
+<!-- end header section -->
 
 <!-- team section -->
 <section class="team_section layout_padding">
@@ -106,7 +103,7 @@
               <div class="col-lg-3 col-sm-6">
                   <div class="box">
                       <div class="img-box">
-                          <img src="images/team-1.jpg" class="img1" alt="Iqlimayla">
+                          <img src="images/ceo.jpg" class="img1" alt="Iqlimayla">
                       </div>
                       <div class="detail-box">
                           <h5>
@@ -140,7 +137,7 @@
               <div class="col-lg-3 col-sm-6">
                   <div class="box">
                       <div class="img-box">
-                          <img src="images/team-2.jpg" class="img1" alt="Janes Robin Pasaribu">
+                          <img src="images/coo.jpg" class="img1" alt="Janes Robin Pasaribu">
                       </div>
                       <div class="detail-box">
                           <h5>
@@ -174,11 +171,11 @@
               <div class="col-lg-3 col-sm-6">
                   <div class="box">
                       <div class="img-box">
-                          <img src="images/team-3.jpg" class="img1" alt="Earl Martinez">
+                          <img src="images/chief.jpg" class="img1" alt="Earl Martinez">
                       </div>
                       <div class="detail-box">
                           <h5>
-                              Earl Martinez
+                              Zaky Fawwaz Azhar
                           </h5>
                           <p>
                               Chief Marketing Officer
@@ -208,11 +205,11 @@
               <div class="col-lg-3 col-sm-6">
                   <div class="box">
                       <div class="img-box">
-                          <img src="images/team-4.jpg" class="img1" alt="Josephine Allard">
+                          <img src="images/dev.jpg" class="img1" alt="Josephine Allard">
                       </div>
                       <div class="detail-box">
                           <h5>
-                              Josephine Allard
+                              Anjani Nur Aprillia
                           </h5>
                           <p>
                               VP of Product Development
@@ -242,11 +239,11 @@
               <div class="col-lg-3 col-sm-6">
                   <div class="box">
                       <div class="img-box">
-                          <img src="images/team-5.jpg" class="img1" alt="HR">
+                          <img src="images/hr.jpg" class="img1" alt="HR">
                       </div>
                       <div class="detail-box">
                           <h5>
-                              HR Manager Name
+                              Kharida Salsabilla Hasani
                           </h5>
                           <p>
                               VP of HR
@@ -276,11 +273,11 @@
               <div class="col-lg-3 col-sm-6">
                   <div class="box">
                       <div class="img-box">
-                          <img src="images/team-6.jpg" class="img1" alt="Logistic">
+                          <img src="images/logistic.jpg" class="img1" alt="Logistic">
                       </div>
                       <div class="detail-box">
                           <h5>
-                              Logistic Manager Name
+                              Gilang Ilham Ibrahim
                           </h5>
                           <p>
                               VP of Logistic
@@ -310,11 +307,11 @@
               <div class="col-lg-3 col-sm-6">
                   <div class="box">
                       <div class="img-box">
-                          <img src="images/team-7.jpg" class="img1" alt="Finance">
+                          <img src="images/finnace.jpg" class="img1" alt="Finance">
                       </div>
                       <div class="detail-box">
                           <h5>
-                              Finance Manager Name
+                              Sausan Zahratul Shita
                           </h5>
                           <p>
                               VP of Finance Officer
@@ -344,11 +341,11 @@
               <div class="col-lg-3 col-sm-6">
                   <div class="box">
                       <div class="img-box">
-                          <img src="images/team-8.jpg" class="img1" alt="IT">
+                          <img src="images/it.jpg" class="img1" alt="IT">
                       </div>
                       <div class="detail-box">
                           <h5>
-                              IT Manager Name
+                              Aditia Ramdhan
                           </h5>
                           <p>
                               VP of IT
@@ -450,11 +447,11 @@
               <a class="" href="product.html">
                 Product
               </a>
-              <a class="" href="why.html">
-                Why Us
-              </a>
               <a class="" href="team.html">
                 Team
+              </a>
+              <a class="" href="help.html">
+                Help
               </a>
             </div>
           </div>
